--- a/_patterns/cards/banner-card.html
+++ b/_patterns/cards/banner-card.html
@@ -1,8 +1,8 @@
-<nav class="card-banner relative">
+<div class="card-banner relative">
   <a href="#">
-    <img class="banner img-flex" src="/images/xbox.jpeg" alt="">
+    <img class="banner img-flex" src="/images/xbox.jpeg" alt="xbox">
     <div class="desc">
       <p class="micro pin-cb">Gaming accessories, starting just at C$ 29.99</p>
     </div>
   </a>
-</nav>
+</div>
