--- a/_patterns/cards/pre-order-card.html
+++ b/_patterns/cards/pre-order-card.html
@@ -1,5 +1,5 @@
 <div class="card">
-  <img class="image img-flex" src="/images/hand.jpeg" alt="">
+  <img class="image img-flex" src="/images/hand.jpeg" alt="hand">
   <div class="island">
     <h3 class="push-0">A new way to play</h3>
     <p class="milli push-0">The new PlayStation 4 comes with the DualShock 4, with a brand-new touchbar technology and high-speed sensors.</p>
