--- a/_patterns/cards/buy-now-card.html
+++ b/_patterns/cards/buy-now-card.html
@@ -1,5 +1,5 @@
 <div class="card">
-  <img class="image img-flex" src="/images/switch.jpeg" alt="">
+  <img class="image img-flex" src="/images/switch.jpeg" alt="switch">
   <div class="wrapper">
     <p class="text-center milli pad-t-1-4 push-0">Rocket League (Nintendo Switch)</p>
     <p class="text-center micro push-0 pad-b-1-2 price">C$ 59.99</p>
