Change card code

--- a/_patterns/cards/banner-card.html
+++ b/_patterns/cards/banner-card.html
@@ -1,4 +1,4 @@
-<div class="card-banner relative">
+<div class="card-banner relative wrapper">
   <a href="#">
     <img class="banner img-flex" src="/images/xbox.jpeg" alt="xbox">
     <div class="desc">
