--- a/_patterns/cards/buy-now-card.html
+++ b/_patterns/cards/buy-now-card.html
@@ -1,7 +1,7 @@
-<div class="card">
+<div class="card wrapper">
   <img class="image img-flex" src="/images/switch.jpeg" alt="switch">
   <div class="wrapper">
-    <p class="text-center milli pad-t-1-4 push-0">Rocket League (Nintendo Switch)</p>
+    <p class="text-center milli pad-t-1-4 push-0 bold">Rocket League (Nintendo Switch)</p>
     <p class="text-center micro push-0 pad-b-1-2 price">C$ 59.99</p>
     <a class="btn push" href="#">Buy now!</a>
   </div>
