Add new libraries

--- a/_patterns/cards/pre-order-card.html
+++ b/_patterns/cards/pre-order-card.html
@@ -1,8 +1,8 @@
-<div class="card">
+<div class="card wrapper">
   <img class="image img-flex" src="/images/hand.jpeg" alt="hand">
   <div class="island">
     <h3 class="push-0">A new way to play</h3>
-    <p class="milli push-0">The new PlayStation 4 comes with the DualShock 4, with a brand-new touchbar technology and high-speed sensors.</p>
+    <p class="milli push-0 bold">The new PlayStation 4 comes with the DualShock 4, with a brand-new touchbar technology and high-speed sensors.</p>
     <p class="text-center micro push-0 pad-t-1-4 pad-b-1-2 price">PlayStation 4 Pro - C$ 399.99</p>
     {% pattern buttons/light %}
   </div>
