--- a/_patterns/navigation/page-buttons.html
+++ b/_patterns/navigation/page-buttons.html
@@ -2,4 +2,6 @@
 <a href="#" class="page island-1-2 gutter-1-2">1</a>
 <a href="#" class="page island-1-2 gutter-1-2">2</a>
 <a href="#" class="page island-1-2 gutter-1-2">3</a>
+<a href="#" class="page island-1-2 gutter-1-2">...</a>
+<a href="#" class="page island-1-2 gutter-1-2">9</a>
 <a href="#" class="next island-1-2 gutter-1-2">></a>
