--- a/_patterns/header-footer/header.html
+++ b/_patterns/header-footer/header.html
@@ -1,7 +1,7 @@
 <div class="center-text header">
 
   <div class="grid wrapper">
-    <a class="unit xs-1 s-1 m-1-4 l-1-4" href="#">
+    <a class="unit xs-1 s-1 m-1-4 l-1-4" href="/">
       <img class="logo pad-t-3-4 pad-b-1-2" src="/images/logo.svg" alt="logo">
     </a>
     <div class="pad-t unit xs-3-4 s-3-4 m-1-2 l-1-2 relative gutter">
@@ -17,8 +17,8 @@
 
   <nav class="grid">
     <a class="button milli unit xs-1-2 s-1-2 m-1-4 l-1-4 island-1-4" href="#">Home</a>
-    <a class="button milli unit xs-1-2 s-1-2 m-1-4 l-1-4 island-1-4"" href="#">Products</a>
-    <a class="button milli unit xs-1-2 s-1-2 m-1-4 l-1-4 island-1-4"" href="#">About</a>
-    <a class="button milli unit xs-1-2 s-1-2 m-1-4 l-1-4 island-1-4"" href="#">Contact</a>
+    <a class="button milli unit xs-1-2 s-1-2 m-1-4 l-1-4 island-1-4" href="/products/">Products</a>
+    <a class="button milli unit xs-1-2 s-1-2 m-1-4 l-1-4 island-1-4" href="#">About</a>
+    <a class="button milli unit xs-1-2 s-1-2 m-1-4 l-1-4 island-1-4" href="#">Contact</a>
   </nav>
 </div>
