Add a new layout

--- a/_patterns/cards/buy-now-card.html
+++ b/_patterns/cards/buy-now-card.html
@@ -3,6 +3,6 @@
   <div class="wrapper">
     <p class="text-center milli pad-t-1-4 push-0 bold">{{include.data.title}}</p>
     <p class="text-center micro push-0 pad-b-1-2 price">{{include.data.price}}</p>
-    {% pattern buttons/primary text="Buy now" %}
+    {% pattern buttons/basic text="Buy now" %}
   </div>
 </div>
