Add new layouts

--- a/_patterns/cards/call-to-action.html
+++ b/_patterns/cards/call-to-action.html
@@ -1,7 +1,7 @@
 <div class="card-banner relative">
-  <img class="banner img-flex" src="/images/keyboard.jpeg" alt="xbox">
+  <img class="banner img-flex" src="/images/{{include.image}}.jpeg" alt="xbox">
   <div class="desc">
-    <p class="micro pin-cb pad-b-2">Best Deals from 2019!</p>
-    <a class="btn pin-cb push" href="#">Check them out ></a>
+    <p class="micro pin-cb pad-b-2">{{include.text}}</p>
+    <a class="btn pin-cb push" href="{{include.url}}">{{include.desc}}></a>
   </div>
 </div>
