--- a/index.html
+++ b/index.html
@@ -3,3 +3,4 @@ layout: default
 ---
 
 <h1>Home!</h1>
+{% pattern cards/call-to-action text="Gaming accessories starting at C$39.99" image="keyboard" desc="Check them out!" %}
