--- a/products.html
+++ b/products.html
@@ -1,5 +1,7 @@
 ---
 layout: default
+highlight_nav: products
 ---
 
-<h1>Product List!</h1>
+<h1>Products!</h1>
+{% pattern cards/call-to-action text="Get refurbished controllers at 50% off!" image="xbox" %}
