--- a/_patterns/cards/buy-now-card.html
+++ b/_patterns/cards/buy-now-card.html
@@ -1,8 +1,8 @@
 <div class="card wrapper">
-  <img class="image img-flex" src="{{include.data.image}}" alt="switch">
+  <img class="image img-flex" src="/images/switch.jpeg" alt="switch">
   <div class="wrapper">
-    <p class="text-center milli pad-t-1-4 push-0 bold">{{include.data.title}}</p>
-    <p class="text-center micro push-0 pad-b-1-2 price">{{include.data.price}}</p>
+    <p class="text-center milli pad-t-1-4 push-0 bold">Nintendo Switch</p>
+    <p class="text-center micro push-0 pad-b-1-2 price">Nintendo's newest console is finally here!</p>
     {% pattern buttons/basic text="Buy now" %}
   </div>
 </div>
